Force each window to be a login shell (source .bash_login)

--- a/home/.screenrc
+++ b/home/.screenrc
@@ -1,3 +1,5 @@
+# make the shell in every window a login shell
+shell -$SHELL
 hardstatus on
 hardstatus alwayslastline
 hardstatus string "%{.bW}%-w%{.rW}%n %t%{-}%+w %=%{..G} %H %{..Y} %m/%d %C%a "
