--- a/.gitmodules
+++ b/.gitmodules
@@ -16,9 +16,12 @@
 [submodule ".vim/bundle/tasklist"]
 	path = .vim/bundle/tasklist
 	url = https://github.com/vim-scripts/TaskList.vim.git
-[submodule ".emacs.d/slime"]
-	path = .emacs.d/slime
+[submodule ".emacs.d/vendor/slime"]
+	path = .emacs.d/vendor/slime
 	url = https://github.com/nablaone/slime.git
-[submodule ".emacs.d/swank-chicken"]
-	path = .emacs.d/swank-chicken
+[submodule ".emacs.d/vendor/swank-chicken"]
+	path = .emacs.d/vendor/swank-chicken
 	url = https://github.com/nickg/swank-chicken.git
+[submodule ".vim/bundle/gundo"]
+	path = .vim/bundle/gundo
+	url = https://github.com/sjl/gundo.vim.git
